--- a/ama_index.html
+++ b/ama_index.html
@@ -196,6 +196,20 @@
                 © 1996-2025, Amazon.com, Inc. or its affiliates
             </div>
         </div>
+        <div class="chatbot">
+            <script type="text/javascript">
+                var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+                (function(){
+                var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+                s1.async=true;
+                s1.src='https://embed.tawk.to/67f60ae0d454b719110fd8ea/1iochl05j';
+                s1.charset='UTF-8';
+                s1.setAttribute('crossorigin','*');
+                s0.parentNode.insertBefore(s1,s0);
+                })();
+            </script>
+        </div>
     </footer>
+
 </body>
 </html>
